--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,14 @@
             "email": "gutierrez.monola@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "phpmd/phpmd": "^2.6",
+        "sebastian/phpcpd": "^3.0",
+        "squizlabs/php_codesniffer": "^3.2",
+        "wp-coding-standards/wpcs": "^2.2",
+        "php-parallel-lint/php-parallel-lint": "^1.2",
+        "phpro/grumphp": "^1.1",
+        "friendsofphp/php-cs-fixer": "^2.16"
+    }
+
 }
